--- a/style.css
+++ b/style.css
@@ -1,67 +1,34 @@
-    /*Landing Page*/
+    /* Universelt - Gælder for alle sider */
 
-    .koldkrig img {
-        max-width: 100%;
+    /* ----- MOBIL VERSION ----- */
+
+    /* ----- Landing Page ----- */
+
+    /* Landing Page */
+
+    /* ----- IPAD VERSION ----- */
+
+    /* ----- WEB VERSION VERSION ----- */
+
+
+    /**Menu links**/
+
+
+    .menu {
+    	text-decoration: none;
     }
-
-    .faxe img {
-        max-width: 100%;
-    }
-
-    .klint img {
-        max-width: 100%;
-    }
-
-    /* WEB Landing Page */
-    @media only screen and (min-width:1100px) {
-        .container {
-            display: grid;
-            grid-template-areas: 'koldkrig faxe klint';
-        }
-
-        .koldkrig img {
-            max-width: 33%;
-        }
-
-        .koldkrig {
-            grid-area: koldkrig;
-        }
-
-        .faxe img {
-            max-width: 33%;
-        }
-
-        .faxe {
-            grid-area: faxe;
-        }
-
-        .klint img {
-            max-width: 33%;
-        }
-
-        .klint {
-            grid-area: klint;
-        }
-
-        > > > > > > > origin/master
-        /**Menu links**/
-
-
-        .menu {
-            text-decoration: none;
-        }
 
     }
 
     * {
-        margin: 0;
+    	margin: 0;
     }
 
 
     li {
-        display: list-item;
-        text-align: -webkit-match-parent;
-        list-style-type: none;
+    	display: list-item;
+    	text-align: -webkit-match-parent;
+    	list-style-type: none;
 
 
     }
@@ -69,8 +36,8 @@
     /*Header Menu*/
 
     a {
-        color: #4a3f3c;
-        text-decoration: none;
+    	color: #4a3f3c;
+    	text-decoration: none;
 
     }
 
@@ -83,19 +50,19 @@
     /*Footermenu*/
 
     .item-footer {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        padding: 5vw;
+    	display: grid;
+    	grid-template-columns: auto auto auto;
+    	padding: 5vw;
 
     }
 
     .item-footer a {
-        Font-family: Arial;
-        color: white;
+    	Font-family: Arial;
+    	color: white;
     }
 
     .item-footer h2 {
-        color: white;
+    	color: white;
 
 
     }
