Tilføjet flere kommentarer

--- a/style.css
+++ b/style.css
@@ -1,15 +1,33 @@
     /* Universelt - Gælder for alle sider */
 
-    /* ----- MOBIL VERSION ----- */
-
-    /* ----- Landing Page ----- */
+    /* ---------- MOBIL VERSION ---------- */
 
     /* Landing Page */
 
-    /* ----- IPAD VERSION ----- */
+    /* Top-navigation */
 
-    /* ----- WEB VERSION VERSION ----- */
+    /* Sidebar navigation */
 
+    /* Åbningstider */
+
+    /* Forside */
+
+    /* Besøg os */
+
+    /* Undervisning */
+
+    /* Om os */
+
+    /* Det sker */
+
+    /* Undervisning */
+
+
+
+
+    /* ---------- IPAD VERSION ---------- */
+
+    /* ---------- WEB VERSION VERSION ---------- */
 
     /**Menu links**/
 
